plugins/javaFX/testData/highlighting/nestedClassConstants.fxml
<?import model.*?>
<?import javafx.scene.control.ToggleButton?>
<?import javafx.scene.layout.VBox?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <ToggleButton text="Single">
        <userData>
            <NestedClassConstantsModel.Cardinality fx:value="SINGLE"/>
        </userData>
    </ToggleButton>
    <ToggleButton text="Unknown">
        <userData>
            <NestedClassConstantsModel.<error descr="Cannot resolve symbol 'NestedClassConstantsModel.Visibility'">Visibility</error> <error descr="Attribute fx:value is not allowed here">fx:value</error>="HIDDEN"/>
        </userData>
    </ToggleButton>
    <ToggleButton text="Up">
        <userData>
            <NestedClassConstantsModel.Nested.Direction fx:constant="UP"/>
        </userData>
    </ToggleButton>
    <ToggleButton text="Fast">
        <userData>
            <NestedClassConstantsModel.<error descr="Cannot resolve symbol 'NestedClassConstantsModel.Nested.Velocity'">Nested.Velocity</error> <error descr="Attribute fx:constant is not allowed here">fx:constant</error>="FAST"/>
        </userData>
    </ToggleButton>
</VBox>